--- a/Projeto Individual/index.css
+++ b/Projeto Individual/index.css
@@ -1,3 +1,5 @@
+/*Index style*/
+
 body{
     margin: 0;
     padding: 0;
@@ -71,31 +73,47 @@ body{
     font-weight: 200;
 }
 
+.botaoCadastro {
+    background-color: rgb(255, 255, 255);
+    color: #000000;
+    border-radius: 5px;
+    border: none;
+    padding: 15px 25px;
+}
+
 
 /*MISSÃO VISÃO VALORES*/
 
 .social{
-    background-color: #e5e5e5;
+    background-color: #ffffff;
     display: flex;
-    justify-content: center;
-    text-align: center;
+    gap: 40px;
+    justify-content: space-between;
+    text-align: start;
 }
 
 .social .container .boxes{
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding: 30px;
+    padding: 40px;
 }
 
 .box{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 }
 
-.box img{
-    width: 170px;
+.box p{
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+    font-weight: 200;
+}
+
+.boxes img{
+    width: 300px;
 }
 
 /*FOTTER*/
