--- a/paginas/css/home.css
+++ b/paginas/css/home.css
@@ -24,6 +24,13 @@
     text-align: center;
 }
 
+.container h2{
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
+    text-align: center;
+}
+
 .container p{
     margin: 0;
     padding: 0; 
