--- a/paginas/css/home.css
+++ b/paginas/css/home.css
@@ -5,9 +5,9 @@
 }
 
 .banner .img{
-    height: 450px;
+    height: 520px;
     color: #ffffff;
-    background-image: url('../img/home_3.jpeg');
+    background-image: url('../img/home_pfvr.jpg');
     background-size: cover;
 }
 
@@ -24,16 +24,22 @@
     text-align: center;
 }
 
-.container h2{
+.container_hist {
+    align-items: center;
+    height: 100%;
+    padding: 80px 200px;
+    text-align: center;
+}
+
+.container_hist h2{
     margin: 0;
     padding: 0;
-    font-weight: 400;
-    text-align: center;
+    font-weight: 500;
 }
 
 .container p{
     margin: 0;
-    padding: 0; 
+    padding: 0px; 
     font-size: 20px;
     font-weight: 300;
     text-align: center;
@@ -41,9 +47,57 @@
 
 .botaoCadastro {
     background-color: #ffffff;
-    color: #152038;
+    color: #b1513e;
     border-radius: 5px;
     border: none;
     padding: 15px 25px;
     cursor: pointer;
 }
+
+.banner .img1{
+    height: 400px;
+    color: #ffffff;
+    background-image: url('../img/ba.jpeg');
+    background-size: cover;
+}
+
+.receitas-container {
+    padding: 0px;
+    background-color: #b1513e;
+    text-align: center;
+  }
+  
+  .receitas-container h2 {
+    font-size: 2em;
+    font-weight: 400;
+    margin-bottom: 30px;
+    color: #ffffff;
+  }
+  
+  .receita {
+    display: inline-block;
+    width: 200px;
+    height: 270px;
+    margin: 50px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    background-color: #ffffff;
+    color: #152038;
+  }
+  
+  .receita:hover {
+    transform: scale(1.02);
+  }
+  
+  .receita img {
+    padding: 30px;
+    width: 70%;
+  }
+  
+  .receita h3 {
+    margin: 15px 0;
+    font-weight: 500;
+    color: #444;
+  }
