--- a/paginas/css/registro.css
+++ b/paginas/css/registro.css
@@ -4,22 +4,50 @@
     align-items: center;
     text-align: center;
     margin: 20px;
+    color: #320a38;
+}
+
+.registros {
+  background-color: #b1513ee8;
 }
   
   .container {
     display: flex;
-    width: 700px;
+    width: 800px;
     height: 500px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.1);
     border-radius: 5px;
     overflow: hidden;
     background-color: #fff;
     justify-content: center;
     align-items: center;
   }
+
+  .container_cadastro {
+    display: flex;
+    width: 800px;
+    height: 600px;
+    border-radius: 5px;
+    overflow: hidden;
+    background-color: #fff;
+    justify-content: center;
+    align-items: center;
+  }
+
+  h1 {
+    font-weight: 400;
+  }
   
   .image-section {
+    flex-direction: row;
     height: 100%;
+    width: 70%;
+    background-color: #f5f5f5;
+  }
+
+  .image-section-login {
+    flex-direction: row;
+    height: 100%;
+    width: 65%;
     background-color: #f5f5f5;
   }
   
@@ -28,9 +56,15 @@
     height: 100%;
     object-fit: cover;
   }
+
+  .image-section-login img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
   
   .login-section {
-    width: 50%;
+    width: 100%;
     padding: 50px 40px;
     display: flex;
     flex-direction: column;
@@ -39,7 +73,7 @@
   
   .login-section h2 {
     margin-bottom: 30px;
-    color: black;
+    color: #152038;
   }
   
   form {
@@ -51,6 +85,7 @@
   label {
     margin-bottom: 5px;
     font-weight: 600;
+    text-align: start;
   }
   
   input {
@@ -59,6 +94,18 @@
     border: 1px solid #ccc;
     border-radius: 8px;
     font-size: 16px;
+  }
+
+  select {
+    margin-bottom: 20px;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    font-size: 16px;
+  }
+
+  option {
+    color: #152038;
   }
   
   button {
