Adicionadas receitas salgadas

--- a/paginas/css/comidas.css
+++ b/paginas/css/comidas.css
@@ -48,5 +48,10 @@ body {
     color: #320a38;
     margin-bottom: 20px;
   }
+
+    h3 {
+    color: #320a38;
+    margin-bottom: 20px;
+  }
   
   
