--- a/paginas/css/comidas.css
+++ b/paginas/css/comidas.css
@@ -14,14 +14,10 @@ body {
     font-weight: 500;
     padding: 20px 200px;
   }
-
-  .topo-receita {
-    padding: 10px 200px;
-  }
   
   .box {
     width: 450px;
-    height: 300px;
+    height: 280px;
     overflow: hidden;
     border-radius: 5px;
   }
@@ -35,13 +31,13 @@ body {
   
   
   .conteudo-receita {
-    padding: 40px 20px;
+    padding: 10px 20px;
     max-width: 800px;
     margin: 0px 200px;
   }
   
   .ingredientes, .preparo {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
   }
   
   h2 {
@@ -52,6 +48,67 @@ body {
     h3 {
     color: #320a38;
     margin-bottom: 20px;
+  }
+
+  .topo-receita {
+    padding: 10px 200px;
+    display: flex;
+    gap: 50px;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.lado-esquerdo {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.label-select {
+    margin-top: 20px;
+    font-weight: bold;
+    color: #320a38;
+}
+
+select {
+    padding: 4px 14px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 13px;
+  }
+
+.lado-direito {
+    flex: 1;
+    max-width: 400px;
+    background-color: #ffffff;  
+    border-color:#320a38;
+    border-radius: 5px;
+    padding: 20px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.199);
+}
+
+.tempo-preparo {
+    font-size: 22px;
+    margin-bottom: 10px;
+}
+
+.descricao-receita {
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+  .botaofavorito {
+    background-color: #ffffff;
+    color: #3d0f44;
+    border-radius: 5px;
+    border: none;
+    padding: 8px 20px;
+    cursor: pointer;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.26);
+}
+
+.botaofavorito:hover {
+    transform: scale(1.02);
   }
   
   
