--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,7 +18,7 @@ header {
     position: sticky;
     top: 0;
     background-color: #b1513e;
-    z-index: 1000;
+    color: #ffffff;
 }
 
 .logo {
