--- a/public/css/dash.css
+++ b/public/css/dash.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html,
 body {
     margin: 0;
@@ -8,8 +14,43 @@ body {
 body {
     display: flex;
     flex-direction: column;
+    font-family: "Inter Tight", sans-serif;
 }
 
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 40px;
+    position: sticky;
+    top: 0;
+    background-color: #b1513e;
+    color: #ffffff;
+}
+
+.logo {
+    font-size: 26px;
+    color: #ffffff;
+    font-weight: 200px;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 25px;
+    align-items: center;
+}
+
+nav a {
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: 500;
+    transition: color 0.2s ease;
+}
+
+nav a:hover {
+    color: #a79b95;
+}
 
 .dash {
     background-color: #ffffff;
@@ -18,8 +59,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    gap: 40px;
-    padding: 20px;
+    padding: 20px 0px;
     flex-wrap: wrap;
 }
 
@@ -36,7 +76,7 @@ h2 {
     width: 350px;
     margin-bottom: 15px;
     background-color: #fff6f6;
-    box-shadow: 2px 2px 8px #1a1a1ab2;
+    box-shadow: 2px 2px 8px #1a1a1a75;
     color: #320a38;
     flex: 1;
     min-width: 300px;
@@ -73,7 +113,7 @@ h2 {
     height: 300px;
     margin-bottom: 15px;
     background-color: #fff6f6;
-    box-shadow: 2px 2px 8px #1a1a1ab2;
+    box-shadow: 2px 2px 8px #1a1a1a44;
     color: #320a38;
     flex: 1;
     min-width: 300px;
