--- a/public/css/dash.css
+++ b/public/css/dash.css
@@ -52,16 +52,6 @@ nav a:hover {
     color: #a79b95;
 }
 
-.dash {
-    background-color: #ffffff;
-    color: #05270b;
-    flex: 1;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 20px 0px;
-    flex-wrap: wrap;
-}
 
 h2 {
     text-align: center;
@@ -144,21 +134,22 @@ p {
 }
 
 .graficoPie {
-    min-width: 200px;
-    max-width: 350px;
+    min-height: 200px;
+    max-height: 300px;
     flex: 1;
 }
 
 .graficoTop {
-    width: 200px;
-    height: 600px;
+    min-width: 300px;
+    max-width: 500px;
     flex: 1;
 }
 
 canvas {
     width: 100%;
-    height: auto;
+    height: 70%;
 }
+
 
 .receitasFavoritadas {
     padding: 20px;
@@ -176,3 +167,57 @@ canvas {
     font-size: 25px;
     padding: 0px 530px;
 }
+
+
+.conteudo-dashboard {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 40px;
+    padding: 20px;
+    flex-wrap: wrap;
+}
+
+/* Coluna da esquerda */
+.coluna-esquerda {
+    flex: 1;
+    max-width: 380px;
+}
+
+/* Coluna da direita com KPIs e gráficos */
+.coluna-direita {
+    flex: 3;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+/* KPIs */
+.kpis {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.kpi {
+    background-color: #fff6f6;
+    border: 2px solid #ffdcdc;
+    border-radius: 12px;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    flex: 1;
+    min-width: 180px;
+    max-width: 300px;
+    text-align: center;
+    color: #320a38;
+}
+
+.graficos {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+
