--- a/public/css/dash.css
+++ b/public/css/dash.css
@@ -71,11 +71,7 @@ h2 {
     flex: 1;
     min-width: 300px;
     text-align: center;
-}
-
-.favorites {
-    padding: 20px;
-}
+}   
 
 .card-receita h3 {
     margin-top: 0;
@@ -165,7 +161,7 @@ canvas {
     justify-content: center;
     text-align: center;
     font-size: 25px;
-    padding: 0px 530px;
+    padding: 20px 0px;
 }
 
 
@@ -190,7 +186,8 @@ canvas {
     flex: 3;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
+    margin: 10px;
 }
 
 /* KPIs */
@@ -217,7 +214,20 @@ canvas {
 .graficos {
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 10px;
 }
 
-
+.listaCompras {
+    border: 2px solid #ddd;
+    border-radius: 12px;
+    margin: 30px;
+    width: 320px;
+    height: 300px;
+    margin-bottom: 15px;
+    background-color: #fff6f6;
+    box-shadow: 2px 2px 8px #1a1a1a85;
+    color: #320a38;
+    flex: 1;
+    min-width: 300px;
+    cursor: pointer;
+}
